agrego animacion y transformacion -desafio entregable- a la rama

--- a/sections/quienesSomos.html
+++ b/sections/quienesSomos.html
@@ -58,9 +58,8 @@
             Además contamos con la tecnología requerida para aplicar en cada caso en particular. Previo análisis del objetivo a ser cubierto.
             
             MGF Seguridad queda a vuestra entera disposición, para ofrecerle información complementaria cuando lo considere apropiado.</p>
-        <!-- <div class="img-container">
-            <img src="../img/mgf-largo-negro.png" class="mgf-img-largo" alt="MGF Seguridad"> 
-        </div> -->
+
+        <img src="../img/mgf-largo-negro.png" class="logoQuienesSomos" alt="MGF Seguridad">
     </main>
     <!-- FIN MAIN -->
 
